# mini_girona_adel

install/: local_setup.sh  setup.sh
install/cola2_control/lib/cola2_control/: captain_node  controller_node  logitech_fx10_to_teleoperation_node.py  pilot_node  teleoperation_node
install/cola2_control/share/cola2_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cola2_lib/share/cola2_lib/: COLA2_LIBConfig.cmake  COLA2_LIBConfigVersion.cmake  COLA2_LIBTargets.cmake  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/cola2_lib_ros/include/cola2_lib_ros/: captain_helper.h  diagnostic_helper.h  navigation_helper.h  param_loader.h  serviceclient_helper.h  setpoints_selector.h  this_node.h  transform_handler.h  types.h
install/cola2_lib_ros/share/cola2_lib_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cola2_minigirona/share/cola2_minigirona/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cola2_msgs/share/cola2_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/minigirona_description/share/minigirona_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/minigirona_stonefish/lib/minigirona_stonefish/: minigirona_stonefish_node
install/minigirona_stonefish/share/minigirona_stonefish/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/stonefish_ros2/lib/stonefish_ros2/: stonefish_simulator  stonefish_simulator_nogpu
install/stonefish_ros2/share/stonefish_ros2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/cola2_control/: CMakeLists.txt  setup.py
src/cola2_control/src/: captain_node.cpp  controller_node.cpp  pilot_node.cpp  teleoperation_node.cpp
src/cola2_lib/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  bitbucket-pipelines.yml
src/cola2_lib/cmake/: uninstall_target.cmake.in
src/cola2_lib/python/cola2.egg-info/: PKG-INFO  SOURCES.txt
src/cola2_lib_ros/: CMakeLists.txt
src/cola2_lib_ros/src/cola2_lib_ros/: diagnostic_helper.cpp
src/cola2_minigirona/: CMakeLists.txt
src/cola2_msgs/: CMakeLists.txt
src/minigirona_description/: CMakeLists.txt
src/minigirona_description/src/: base_link_to_world_ned.py  odom_to_world_ned.cpp
src/minigirona_stonefish/: CMakeLists.txt
src/minigirona_stonefish/launch/: minigirona_simulation.launch.py
src/minigirona_stonefish/scenarios/: minigirona.scn  minigirona_tank.scn
src/stonefish_ros2/: CMakeLists.txt
(+1047 files in other folders)
